Fix for long headers to now use an ellipsis on overflow.
Jira Issue DD-1362

Sync to source repo @5c7a46e0831627d993f9aa7c3bb7cccaf900086a

--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -6,6 +6,9 @@ div.dtsp-topRow {
   align-content: flex-start;
   align-items: flex-start;
 }
+div.dtsp-topRow input.dtsp-search {
+  text-overflow: ellipsis;
+}
 div.dtsp-topRow div.dtsp-subRow1 {
   display: flex;
   flex-direction: row;
